<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.theloungeexperts.moneytalks.LoginActivity">

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150sp"
        android:gravity="center_horizontal"
        android:text="@string/auth_label"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100sp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email_hint"
            android:gravity="center_vertical"
            android:hint="@string/email_hint"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:gravity="center_vertical"
            android:hint="@string/password_hint"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/register_button" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5sp"
                android:text="@string/login_bottom" />

            <TextView
                android:id="@+id/loginLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_link"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>