<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_shape"
    android:orientation="vertical"
    android:padding="10sp"
    android:layout_margin="10sp">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10sp"
            android:text="@string/card_theme"
            android:textAlignment="center"
            android:textColor="@color/afterdark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="10sp"
            android:text="@string/card_author"
            android:textAlignment="center"
            android:textColor="@color/afterdark" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="10sp"
            android:text="@string/card_time"
            android:textAlignment="center"
            android:textColor="@color/day" />
    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_title"
        android:textColor="@color/afterdark"
        android:textSize="20sp"
        android:padding="10sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:text="@string/card_content"
        android:textColor="@color/afterdark"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="end">

        <ImageButton
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:background="@null"
            app:srcCompat="@drawable/ic_question_answer_black_24dp" />
    </LinearLayout>

</LinearLayout>