<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/morning"
    android:orientation="vertical"
    tools:context=".InvestmentToolsActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/sections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/morning"
        app:tabIndicatorColor="@color/brand"
        app:tabTextColor="@color/afterdark">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/stocks_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stocks_label" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/currencies_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currencies_label" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/etf_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etf_label" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.viewpager2.widget.ViewPager2>

</LinearLayout>